--- a/index.html
+++ b/index.html
@@ -1,201 +1,105 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8"
 	pageEncoding="UTF-8"%>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
+<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
+
 <html>
 <head>
-<link href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/sketchy/bootstrap.min.css" rel="stylesheet"> 
-  <style>
-/*   .imgwrap img:last-child{display:none}
-  .imgwrap:hover img:first-child{display:none}
-  .imgwrap:hover img:last-child{display:inline-block} */
-  .round {
-  	border-radius:20px;
-  	width:300px;
-  	height:200px;
-  	
-  .navbar {
-    height: 70px;
-    width: 100%;
-    background: black;
-    color: white;
-}
+<link
+	href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/superhero/bootstrap.min.css"
+	rel="stylesheet">
+<meta charset="UTF-8">
+<link href='/resources/fullcalendar-5.3.2/lib/main.css' rel='stylesheet' />
+<script src='/resources/fullcalendar-5.3.2/lib/main.js'></script>
+<script type='text/javascript'>
 
-.navbar-nav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+document.addEventListener('DOMContentLoaded', function() {
+  var calendarEl = document.getElementById('calendar');
 
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    height: 100%;
+  var calendar = new FullCalendar.Calendar(calendarEl, {
+    googleCalendarApiKey: 'AIzaSyBWHv8yaVY2J5bU1vrp0QJUsPMz5IjXetY',
+    eventSources: [
+    {
+          googleCalendarId: 'pinevol7@gmail.com',
+          className: '준형',
+          color: '#be5683', //rgb,#ffffff 등의 형식으로 할 수 있어요.
+          //textColor: 'black' 
+        },
+        {
+            googleCalendarId: '63hdv0pe9l6lh5m930vpiolkq0@group.calendar.google.com',
+            className: 'IT',
+            color: '#088A29', //rgb,#ffffff 등의 형식으로 할 수 있어요.
+            //textColor: 'black' 
+          }
+    ]
+  });
+  calendar.render();
+});
+</script>
+<style>
+#calendar {
+	width: 90%;
+	margin: 20px auto;
 }
+</style>
+</head>
 
-.dropdown {
-    opacity: 0;
-    position: absolute;
-    width: 550px;
-    z-index: 3;
- background-color: rgba( 255, 255, 255, 0.5 );
-    
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    height: 3.5rem;
-    margin-top: 0rem;
-    padding: 0.5rem;
-   
-    transform: translateX(-40%);
-    transition: opacity .15s ease-out;
-    border-radius: 25px;
-}
+</html>
 
-.dropdown-item a {
-    width: 100%;
-    height: 100%;
-}
-
-.has-dropdown:focus-within .dropdown   {
-    opacity: 1;
-    pointer-events: auto;
-}
-
-  }
-}
-  </style>
-  
-  
-	<title>Home</title>
+<title>Home</title>
 </head>
 <body>
-<script type="text/javascript">
-var TxtType = function(el, toRotate, period) {
-    this.toRotate = toRotate;
-    this.el = el;
-    this.loopNum = 0;
-    this.period = parseInt(period, 10) || 2000;
-    this.txt = '';
-    this.tick();
-    this.isDeleting = false;
-};
+<div align=center>
+	<a href="/" class="display-3"><img
+		src="/resources/image/planner.png"
+		style="width: 400px; height: 240px; display: block;" link="home"></a>
+</div>
 
-TxtType.prototype.tick = function() {
-    var i = this.loopNum % this.toRotate.length;
-    var fullTxt = this.toRotate[i];
-
-    if (this.isDeleting) {
-    this.txt = fullTxt.substring(0, this.txt.length - 1);
-    } else {
-    this.txt = fullTxt.substring(0, this.txt.length + 1);
-    }
-
-    this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
-
-    var that = this;
-    var delta = 200 - Math.random() * 100;
-
-    if (this.isDeleting) { delta /= 2; }
-
-    if (!this.isDeleting && this.txt === fullTxt) {
-    delta = this.period;
-    this.isDeleting = true;
-    } else if (this.isDeleting && this.txt === '') {
-    this.isDeleting = false;
-    this.loopNum++;
-    delta = 500;
-    }
-
-    setTimeout(function() {
-    that.tick();
-    }, delta);
-};
-
-window.onload = function() {
-    var elements = document.getElementsByClassName('typewrite');
-    for (var i=0; i<elements.length; i++) {
-        var toRotate = elements[i].getAttribute('data-type');
-        var period = elements[i].getAttribute('data-period');
-        if (toRotate) {
-          new TxtType(elements[i], JSON.parse(toRotate), period);
-        }
-    }
-    // INJECT CSS
-    var css = document.createElement("style");
-    css.type = "text/css";
-    css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
-    document.body.appendChild(css);
-};
-
-
-
-</script>
-<div class="jumbotron" style="padding-bottom: 10px; padding-top: 10px;" >
-  <div align=center>
-  <a href="/" class="display-3"><img src="/resources/logo.png" style="width:350px; height:160px; margin-left: auto; margin-right: auto; display: block;"
- link="home"></a>
-  <div align=center>
  	<c:choose>
 	<c:when test="${not empty sessionScope.loginId }">
-	${sessionScope.loginId } 님 환영합니다.
-	  <a class="badge badge-pill badge-secondary" href="member/logout" role="button">Logout</a>
+	<div align=center>${sessionScope.loginNm } 님 환영합니다! 😄</div>
+	<ul class="nav nav-tabs">
+		<li class="nav-item"><a class="nav-link active" data-toggle="tab"
+			href="/">Home</a></li>
+		<li class="nav-item"><a class="nav-link" data-toggle="tab"
+			href="/board/Profile">Profile</a></li>
+		<li class="nav-item"><a class="nav-link" data-toggle="tab"
+			href="/member/cheer">Cheer</a></li>
+		<li class="nav-item"><a class="nav-link" data-toggle="tab"
+			href="/member/logout">Logout</a></li>
+	</ul>
 	</c:when>
 	<c:otherwise>
-    <a class="badge badge-pill badge-warning" href="member/countryCheck" role="button">Join</a>
-    <a class="badge badge-pill badge-success" href="member/loginForm" role="button">Login</a>	
+	<ul class="nav nav-tabs">
+		<li class="nav-item"><a class="nav-link active" data-toggle="tab"
+			href="/">Home</a></li>
+		<li class="nav-item"><a class="nav-link" data-toggle="tab"
+			href="/board/Profile">Profile</a></li>
+		<li class="nav-item"><a class="nav-link" data-toggle="tab"
+			href="/member/cheer">Cheer</a></li>
+		<li class="nav-item"><a class="nav-link" data-toggle="tab"
+			href="/member/loginForm">Login</a></li>
+		<li class="nav-item"><a class="nav-link" data-toggle="tab"
+			href="/member/joinForm">Join</a></li>
+	</ul>
   </c:otherwise>
   </c:choose>
-  </div>
+  
 
- </div>
-  	<br>
-<!--   	<div class="imgwrap">
-	<img src="/resources/map.jpg" style="width:1200px; height:600px; margin-left: auto; margin-right: auto; display: block;">
-	<img src="/resources/groot.png">
-	</div> -->
-<!-- 	<img onmouseover="this.src='/resources/seoul.jpg'" style="cursor: hand; width:1200px; height:600px; margin-left: auto; margin-right: auto; display: block;" onclick="window.open('http://www.naver.com','_self');" onmouseout="this.src='/resources/map.jpg'" src="/resources/map.jpg" border="0">
-	 -->
-	 
-	 <div class="card bg-light mb-3" style="max-width: 200rem; text-align: center;">
-  <div class="card-header">✈️</div>
-    <a href="" class="typewrite" style="font-size: 30px; text-decoration: none; margin-top: 30px;" data-period="2000" data-type='[ "Where are you Going?", "Korea?", "Japan?", "France?" ]'>
-    <span class="wrap"></span>
-  </a>
-  <div class="card-body">
- 
-   <div id="map" style="width:1200px; height:700px;">
-	<img id="Image-Maps-Com-image-maps-2020-10-18-201418" class="round" onmouseover="this.src='/resources/mainmap.png'" style= "position:absolute;width:97%; height:80%;margin-left: auto; margin-right: auto; display: block;" onmouseout="this.src='/resources/mainmap.png'" src="/resources/mainmap.png" style= "position:absolute;width:100%; height:100%;margin-left: auto; margin-right: auto; display: block;"   usemap="#image-maps-2020-10-18-201418" alt="" />
-<map name="image-maps-2020-10-18-201418" id="ImageMapsCom-image-maps-2020-10-18-201418">
+	<br>
+	<div align="center">
+		<div class="card border-secondary mb-3" style="width: 90%;">
 
+			<div class="card-header">🗓</div>
+			<div class="card-body">
 
-<area alt="" title="korea" href="/board/boardList" shape="rect" coords="896,307,961,371" style="outline:none;" target="_self"/>
-<area  alt="" title="china" href="/board/boardList" shape="rect" coords="660,189,897,347" style="outline:none;" target="_self"/>
-<area  alt="" title="canada" href="/board/boardList" shape="rect" coords="203,195,291,279" style="outline:none;" target="_self"/>
-<area  alt="" title="america" href="/board/boardList" shape="rect" coords="200,307,304,387" style="outline:none;" target="_self"/>
-<area  alt="" title="uk" href="/board/boardList" shape="rect" coords="500,250,565,314" style="outline:none;" target="_self"/>
-<area  alt="" title="france" href="/board/boardList" shape="rect" coords="571,283,636,347" style="outline:none;" target="_self"/>
-<area  alt="" title="japan" href="/board/boardList" shape="rect" coords="949,319,1014,383" style="outline:none;" target="_self"/>
-<area shape="rect" coords="1618,1057,1620,1059" alt="Image Map" style="outline:none;" title="Image Map" href="http://www.image-maps.com/index.php?aff=mapped_users_0" />
+				<body>
+					<div id='calendar'></div>
+				</body>
 
-</map>
-</div>
-  </div>
-</div>
- <div style="text-align:center">© IAMGROOT Corp.</div>
+			</div>
+		</div>
+	</div>
 
-
-<%-- <c:choose>
-<c:when test="${not empty sessionScope.loginId }">
-<a>${sessionScope.loginId } 님 환영합니다. </a><br>
-
-<a href="member/logout">로그아웃</a>
-</c:when>
-<c:otherwise>
-
-<a href="member/countryCheck">Join</a>
-<a href="member/loginForm">Login</a>
-</c:otherwise>
-</c:choose> --%>
 
 </body>
 </html>
-
